Fixes horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ main {
   }
 }
 
-header {
+nav {
   grid-area: header;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -108,18 +108,21 @@ nav ul {
 }
 
 @media (max-width: 600px) {
-  .overlay-show {
-    display: block;
+  html,
+  body {
+    overflow-x: hidden; /* Prevent horizontal scroll */
+    position: relative; /* Prevent horizontal scroll on mobile*/
   }
 
-  .menu-icon-wrapper {
-    position: relative;
-    z-index: 2;
+  .overlay-show {
+    display: block;
   }
 
   #menu-icon {
     display: block;
     cursor: pointer;
+    position: relative;
+    z-index: 5;
   }
 
   .nav-show {
@@ -130,7 +133,8 @@ nav ul {
   nav ul {
     position: absolute;
     right: 0px;
-    height: 100vh;
+    top: 12vh;
+    height: 75vh;
     width: 50%;
     transform: translateX(100%);
     z-index: 1;
@@ -138,14 +142,10 @@ nav ul {
     justify-content: flex-start;
     gap: 2rem;
     background-color: white;
-    padding-top: 9rem;
+    padding-top: 3rem;
     padding-left: 2rem;
     box-shadow: 0px 2px 4px #f3f3f3;
     transition: 0.25s;
-  }
-
-  body {
-    overflow-x: hidden;
   }
 }
 
